--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = terram-protos
 	url = http://github.com/xpring-eng/terram-protos
 	branch = master
+[submodule "terram"]
+	path = terram
+	url = http://github.com/xpring-eng/terram.git
+	branch = master
