--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@improbable-eng/grpc-web": "0.11.0",
     "@types/google-protobuf": "3.7.1",
+    "@types/node": "12.7.2",
     "google-protobuf": "3.9.1",
     "mocha": "6.2.0",
     "ts-protoc-gen": "0.10.0",
