--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "./scripts/regenerate_protos.sh && tsc -d",
-    "clean": "rm -rf ./generated ./dist ./build",
+    "build": "./scripts/regenerate_protos.sh",
+    "clean": "rm -rf ./src/generated ./dist ./build",
     "pretest": "./scripts/regenerate_protos.sh && tsc",
     "lint": "eslint **/*.ts",
     "lint:fix": "eslint **/*.ts --fix",
@@ -41,19 +41,23 @@
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-prettier": "3.1.2",
-    "grpc_tools_node_protoc_ts": "2.5.9",
     "grpc-tools": "^1.8.0",
+    "grpc-web": "^1.0.7",
+    "grpc_tools_node_protoc_ts": "2.5.9",
     "mocha": "7.0.0",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "15.0.0",
     "prettier": "1.19.1",
     "source-map-support": "0.5.16",
+    "ts-loader": "^6.2.1",
     "ts-node": "8.5.4",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "3.5.3",
-    "typescript-eslint-parser": "22.0.0"
+    "typescript-eslint-parser": "22.0.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "xpring-common-js": "1.1.15",
