--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,10 @@
 {
     "env": {
         "es6": true,
-        "mocha": true,  
+        "mocha": true,
         "node": true
     },
-    "extends": [ 
+    "extends": [
         "eslint:recommended",
         "plugin:mocha/recommended",
         "plugin:@typescript-eslint/recommended",
@@ -22,9 +22,10 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
         "mocha",
-        "@typescript-eslint"        
+        "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
         "@typescript-eslint/consistent-type-definitions": [ "error"],
         "@typescript-eslint/indent": ["error", 2],
         "@typescript-eslint/no-floating-promises": [ "error" ],
@@ -35,6 +36,6 @@
         "@typescript-eslint/promise-function-async": [ "error" ],
         "@typescript-eslint/require-await": [ "error" ],
         "@typescript-eslint/no-parameter-properties": [ "off" ],
-        "@typescript-eslint/no-var-requires": [ "off" ]        
+        "@typescript-eslint/no-var-requires": [ "off" ]
     }
 }
