--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "@types/chai-string": "1.4.2",
     "@types/google-protobuf": "3.7.2",
     "@types/mocha": "5.2.7",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "chai": "4.2.0",
     "chai-string": "1.5.0",
     "coveralls": "3.0.9",
-    "eslint": "5.16.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-prettier": "6.9.0",
-    "eslint-plugin-import": "2.19.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-prettier": "3.1.2",
     "grpc-tools": "^1.8.0",
@@ -50,11 +51,11 @@
     "prettier": "1.19.1",
     "source-map-support": "0.5.16",
     "ts-loader": "^6.2.1",
-    "ts-node": "8.5.4",
+    "ts-node": "^8.6.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "3.5.3",
+    "typescript": "^3.7.4",
     "typescript-eslint-parser": "22.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
