--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "./scripts/regenerate_protos.sh",
+    "build": "npm run clean && ./scripts/regenerate_protos.sh && npm run lint && webpack",
     "clean": "rm -rf ./src/generated ./dist ./build",
     "pretest": "./scripts/regenerate_protos.sh && tsc",
     "lint": "eslint **/*.ts",
@@ -30,6 +30,7 @@
     "@types/chai-string": "1.4.2",
     "@types/google-protobuf": "3.7.2",
     "@types/mocha": "5.2.7",
+    "@types/node": "^13.1.6",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "chai": "4.2.0",
