--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,13 @@ jobs:
       - protobuf/install
 
       - run:
+          name: "Install protoc plugin"
+          command: |
+            curl -L https://github.com/grpc/grpc-web/releases/download/1.0.7/protoc-gen-grpc-web-1.0.7-linux-x86_64 --output protoc-gen-grpc-web
+            sudo mv protoc-gen-grpc-web /usr/local/bin/
+            chmod +x /usr/local/bin/protoc-gen-grpc-web
+
+      - run:
           name: "Pull submodules"
           command: git submodule update --init --recursive
 
