--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "npm run clean && ./scripts/regenerate_protos.sh && npm run lint && webpack",
+    "build": "npm run test && tsc -d",
+    "webpack": "npm run test && webpack",
     "clean": "rm -rf ./src/generated ./dist ./build",
-    "pretest": "./scripts/regenerate_protos.sh && tsc",
-    "lint": "eslint ./src/*.ts",
-    "lint:fix": "eslint ./src/*.ts --fix",
-    "test": "npm run lint && nyc mocha",
-    "prepublishOnly": "npm test && tsc -d"
+    "pretest": "npm run clean && ./scripts/regenerate_protos.sh && npm run lint",
+    "lint": "eslint **/*.ts",
+    "lint:fix": "eslint **/*.ts --fix",
+    "test": "nyc mocha",
+    "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/xpring-eng/Xpring-JS#readme",
   "devDependencies": {
@@ -30,7 +31,7 @@
     "@types/chai-string": "1.4.2",
     "@types/google-protobuf": "3.7.2",
     "@types/mocha": "5.2.7",
-    "@types/node": "^13.1.6",
+    "@types/node": "^13.1.7",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "chai": "4.2.0",
@@ -45,7 +46,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "grpc-tools": "^1.8.0",
     "grpc-web": "^1.0.7",
-    "grpc_tools_node_protoc_ts": "2.5.9",
+    "grpc_tools_node_protoc_ts": "^2.5.10",
     "mocha": "7.0.0",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "15.0.0",
@@ -56,14 +57,14 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "typescript-eslint-parser": "22.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "xpring-common-js": "1.1.15",
-    "grpc": "^1.24.2"
+    "grpc": "^1.24.2",
+    "xpring-common-js": "^2.0.0"
   },
   "nyc": {
     "extension": [
