--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xpring-js",
   "version": "1.2.5",
   "description": "XpringJS provides a Javascript based SDK for interacting with the Ripple Ledger.",
-  "main": "build/src/index.js",
+  "main": "build/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xpring-eng/Xpring-JS.git"
@@ -65,7 +65,7 @@
   "dependencies": {
     "grpc": "^1.24.2",
     "xhr2": "^0.2.0",
-    "xpring-common-js": "^2.0.0"
+    "xpring-common-js": "^2.0.1"
   },
   "nyc": {
     "extension": [
