--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "npm run test && tsc -d && ./scripts/copy_typescript_types.sh",
-    "webpack": "npm run test && webpack && ./scripts/copy_typescript_types.sh",
+    "build": "npm run test && tsc -d",
     "clean": "rm -rf ./src/generated ./dist ./build",
     "pretest": "npm run clean && ./scripts/regenerate_protos.sh && npm run lint",
     "lint": "eslint **/*.ts",
@@ -31,9 +30,9 @@
     "@types/chai-string": "1.4.2",
     "@types/google-protobuf": "3.7.2",
     "@types/mocha": "5.2.7",
-    "@types/node": "^13.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
+    "@types/node": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
     "chai": "4.2.0",
     "chai-string": "1.5.0",
     "coveralls": "3.0.9",
@@ -51,15 +50,12 @@
     "nyc": "15.0.0",
     "prettier": "1.19.1",
     "source-map-support": "0.5.16",
-    "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.7.5",
-    "typescript-eslint-parser": "22.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "typescript-eslint-parser": "22.0.0"
   },
   "dependencies": {
     "grpc-web": "1.0.7",
