--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
     "@types/node": "^14.0.1",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "@xpring-eng/eslint-config-base": "^0.7.0",
     "chai": "4.2.0",
     "copyfiles": "^2.2.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-jsdoc": "^27.0.6",
     "eslint-plugin-mocha": "^7.0.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-tsdoc": "^0.2.5",
     "grpc-tools": "1.9.0",
     "grpc_tools_node_protoc_ts": "^3.0.0",
     "mocha": "^8.0.1",
